# allegro-hamoopi

./: .gitignore  CHARACTER_SELECTION_SUMMARY.md  CMakeLists.txt  HAMOOPI  INI_CHARACTER_SYSTEM.md  LIBRETRO_README.md  Makefile  README.md  REFACTORING.md  SDL2_MIGRATION.md  SUMMARY.md  allegro_compat.cpp  hamoopi_core.cpp  hamoopi_libretro.info
.github/workflows/: build.yml  cd.yml
_codeql_build_dir/: CMakeCache.txt  Makefile
cmake/: FindAllegro4.cmake  FindINIH.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
docs/: BACKEND_DECOUPLING_COMPLETE.md  CODE_ORGANIZATION.md  IMPLEMENTATION_SUMMARY.md  KNOWN_LIMITATIONS.md  PLATAFORMA_ABSTRACAO_PTBR.md  PLATFORM_ABSTRACTION.md  SDL2_QUICKSTART.md  STB_POC_README.md  TIMER_OPTIMIZATION.md
src/: HAMOOPI.c  HAMOOPI.cpp  HAMOOPI_new.c  allegro_input_backend.h  allegro_system_backend.h  backend.h  backend_allegro4.c  backend_example.cpp  backend_init.cpp  backend_manager.cpp  backend_manager.h  hamoopi_collision.c  hamoopi_collision.h  hamoopi_core.h  hamoopi_editor.c  hamoopi_editor.h  hamoopi_font.h  hamoopi_fsm.h  hamoopi_game.h  hamoopi_globals.h  hamoopi_image.h  hamoopi_input.h  hamoopi_player.c  hamoopi_render.h  hamoopi_types.h  hamoopi_types_compat.h  hamoopi_unified_types.h  hamoopi_utils.c  hamoopi_wrapper.h  main.c  platform.h  platform_allegro.c  platform_compat.h  platform_libretro.c  platform_sdl2.c  stb_backend_full.c  stb_backend_poc.c  test_compat  test_compat.c
src/backend/: platform.h  platform_allegro.c  platform_sdl2.c
src/core/: globals.h  macros.h  utils.h
src/game_loop/: edit.c  play.c
src/modules/: editor.c  player.c
tools/Font Test and Generator/: CMakeLists.txt  README.md
tools/Font Test and Generator/src/: mainwindow.cpp
tools/Font Test and Generator/ttf2pcx-FontGenerator/: CMakeLists.txt  MIGRATION.md  README.md  README_QT.md  character_qt.cpp  mainwindow.cpp  test.sh
tools/Font Test and Generator/ttf2pcx-FontGenerator/docs/: MIGRATION.md
tools/Font Test and Generator/ttf2pcx-FontGenerator/src/: mainwindow.h
tools/Font Test and Generator/ttf2pcx-FontGenerator/tests/: test.sh
tools/Palette Generator/: CMakeLists.txt  PalleteGenerator.c
tools/pallete-generator/: CMakeLists.txt  PalleteGenerator_SDL2.c  README_SDL2.md
